--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
     
     <header>
     <!-- NAVBAR -->
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
           <a class="navbar-brand" href="home.html">SOLAW</a>
 
