--- a/home.html
+++ b/home.html
@@ -39,11 +39,11 @@
               </li>
             </ul>
 
-            <!-- Search  -->
+            <!-- Search  
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>  
+            </form>  -->
 
             <div class="d-flex login align-items-center login">
               <a class="nav-link me-3" href="#">Sign in</a>
