--- a/PEMBUATANDOKUM.html
+++ b/PEMBUATANDOKUM.html
@@ -64,6 +64,7 @@
                 <img src="proxi/IMG_7740.JPG" class="scrolling-image" alt="...">
                 <img src="proxi/IMG_7961.JPG" class="scrolling-image" alt="...">
                 <img src="proxi/DSC04609.JPG" class="scrolling-image" alt="...">
+                <img src="proxi/PETH.JPG" class="scrolling-image" alt="...">
 
                 <img src="ROHMAN.JPG" class="scrolling-image" alt="...">
                 <img src="AGUNG.JPG" class="scrolling-image" alt="...">
@@ -72,7 +73,7 @@
                 <img src="proxi/IMG_7740.JPG" class="scrolling-image" alt="...">
                 <img src="proxi/IMG_7961.JPG" class="scrolling-image" alt="...">
                 <img src="proxi/DSC04609.JPG" class="scrolling-image" alt="...">
-
+                <img src="proxi/PETH.JPG" class="scrolling-image" alt="...">
               
             </div>
         </div>
@@ -214,6 +215,30 @@
                         meng-presentasikan hasil dari pengembangan website Hukum kami, SoLAW.
                     </p>
                 </div>
+
+                <div class="col-md-4">
+                    PROFIL
+                <p class="deskrip">
+                    Kami mahasiswa Telkom University, </br>
+                    meng-presentasikan hasil dari pengembangan website Hukum kami, SoLAW.
+                </p>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4">
+                        PROFIL
+                    <p class="deskrip">
+                        Kami mahasiswa Telkom University, </br>
+                        meng-presentasikan hasil dari pengembangan website Hukum kami, SoLAW.
+                    </p>
+                </div>
+
+                <div class="col-md-4">
+                    PROFIL
+                <p class="deskrip">
+                    Kami mahasiswa Telkom University, </br>
+                    meng-presentasikan hasil dari pengembangan website Hukum kami, SoLAW.
+                </p>
             </div>
         </div>
     </footer>
