Update Navigasi Solusi
Menambahkan underline pada sub page solusi yang dipilih

--- a/home.html
+++ b/home.html
@@ -44,30 +44,42 @@
                   <div class="mega-menu-wrapper">
                     <div class="row">
                       <div class="col item-dropdown">
-                        <a href="#">Prosedur Hukum</a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et dapibus orci, at tincidunt ipsum. Aliquam id sem a enim.</p>
+                        <a href="#">
+                          <h4>Prosedur Hukum</h4>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et dapibus orci, at tincidunt ipsum. Aliquam id sem a enim.</p>
+                        </a>
                       </div>
                       <div class="col item-dropdown">
-                        <a href="#">Konsultasi Hukum</a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et dapibus orci, at tincidunt ipsum. Aliquam id sem a enim.</p>
+                        <a href="#">
+                          <h4>Konsultasi Hukum</h4>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et dapibus orci, at tincidunt ipsum. Aliquam id sem a enim.</p>
+                        </a>
                       </div>
                       <div class="col item-dropdown">
-                        <a href="#">Izin Usaha</a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et dapibus orci, at tincidunt ipsum. Aliquam id sem a enim.</p>
+                        <a href="#">
+                          <h4>Izin Usaha</h4>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et dapibus orci, at tincidunt ipsum. Aliquam id sem a enim.</p>
+                        </a>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col item-dropdown">
-                        <a href="#">Page</a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et dapibus orci, at tincidunt ipsum. Aliquam id sem a enim.</p>
+                        <a href="#">
+                          <h4>Page</h4>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et dapibus orci, at tincidunt ipsum. Aliquam id sem a enim.</p>
+                        </a>
                       </div>
                       <div class="col item-dropdown">
-                        <a href="#">Page</a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et dapibus orci, at tincidunt ipsum. Aliquam id sem a enim.</p>
+                        <a href="#">
+                          <h4>Page</h4>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et dapibus orci, at tincidunt ipsum. Aliquam id sem a enim.</p>
+                        </a>
                       </div>
                       <div class="col item-dropdown">
-                        <a href="#">Page</a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et dapibus orci, at tincidunt ipsum. Aliquam id sem a enim.</p>
+                        <a href="#">
+                          <h4>Page</h4>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et dapibus orci, at tincidunt ipsum. Aliquam id sem a enim.</p>
+                        </a>
                       </div>
                     </div>
                   </div>
@@ -78,9 +90,9 @@
               </li>
             </ul>
 
-            <div class="d-flex login align-items-center login">
-              <a class="nav-link me-3" href="#">Sign up</a>
-              <button type="button" class="btn btn-primary">Login</button>
+            <div class="d-flex login align-items-center">
+              <a class="nav-link me-3" href="Sign up.html">Sign up</a>
+              <a type="button" class="btn btn-primary" href="LOGIN.html">Login</a>
             </div>
           </div>
         </div>
@@ -111,6 +123,7 @@
   </div>
 
   <div class="content">
+    <h2>Artikel</h2>
     <div class="row row-cols-1 row-cols-md-2 g-4">
       <div class="col">
         <div class="card h-100">
@@ -118,10 +131,7 @@
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-          <div class="card-footer">
-            <small class="text-white">Last updated 3 mins ago</small>
+            <a href="#" class="btn btn-primary">Baca Selengkapnya</a>
           </div>
         </div>
       </div>
@@ -132,10 +142,7 @@
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-          <div class="card-footer">
-            <small class="text-white">Last updated 3 mins ago</small>
+            <a href="#" class="btn btn-primary">Baca Selengkapnya</a>
           </div>
         </div>
       </div>
@@ -146,10 +153,7 @@
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-          <div class="card-footer">
-            <small class="text-white">Last updated 3 mins ago</small>
+            <a href="#" class="btn btn-primary">Baca Selengkapnya</a>
           </div>
         </div>
       </div>
@@ -160,10 +164,7 @@
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-          <div class="card-footer">
-            <small class="text-white">Last updated 3 mins ago</small>
+            <a href="#" class="btn btn-primary">Baca Selengkapnya</a>
           </div>
         </div>
       </div>
